主要增加了区域的内容及对外接口，对代码生成功能做了调整;对框架页面引入js路径做了修改

--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -14,7 +14,7 @@
 	<link th:href="@{/css/animate.css}" rel="stylesheet"/>
 	<link th:href="@{/css/style.css}" rel="stylesheet"/>
 	<link th:href="@{/ajax/libs/select/select2.css}" rel="stylesheet"/>
-	<link th:href="@{/ruoyi/css/ry-ui.css}" rel="stylesheet"/>
+	<link th:href="@{/mxl/css/ry-ui.css}" rel="stylesheet"/>
 </head>
 <div th:fragment="footer">
 	<script th:src="@{/js/jquery.min.js}"></script>
@@ -40,8 +40,8 @@
 	<script th:src="@{/ajax/libs/iCheck/icheck.min.js}"></script>
 	<script th:src="@{/ajax/libs/layer/layer.min.js}"></script>
 	<script th:src="@{/ajax/libs/layui/layui.js}"></script>
-	<script th:src="@{/ruoyi/js/common.js?v=3.2.0}"></script>
-	<script th:src="@{/ruoyi/js/ry-ui.js?v=3.2.0}"></script>
+	<script th:src="@{/mxl/js/common.js?v=3.2.0}"></script>
+	<script th:src="@{/mxl/js/ry-ui.js?v=3.2.0}"></script>
 	<script src="http://tajs.qq.com/stats?sId=62048022"></script>
 	<script th:inline="javascript"> var ctx = [[@{/}]]; </script>
 </div>
