--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -83,7 +83,7 @@
 <script src="../static/ajax/libs/layer/layer.min.js" th:src="@{/ajax/libs/layer/layer.min.js}"></script>
 <script src="../static/ajax/libs/blockUI/jquery.blockUI.js" th:src="@{/ajax/libs/blockUI/jquery.blockUI.js}"></script>
 <script src="http://tajs.qq.com/stats?sId=62048022"></script>
-<script src="../static/mxl/js/ry-ui.js" th:src="@{/ruoyi/js/ry-ui.js?v=3.2.0}"></script>
-<script src="../static/mxl/login.js" th:src="@{/ruoyi/login.js}"></script>
+<script src="../static/mxl/js/ry-ui.js" th:src="@{/mxl/js/ry-ui.js?v=3.2.0}"></script>
+<script src="../static/mxl/login.js" th:src="@{/mxl/login.js}"></script>
 </body>
 </html>
