--- a/src/main/resources/templates/express/freightRate/add.html
+++ b/src/main/resources/templates/express/freightRate/add.html
@@ -6,13 +6,13 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-freightRate-add">
 			<div class="form-group">	
-				<label class="col-sm-3 control-label">发送站Id：</label>
+				<label class="col-sm-3 control-label">发送站：</label>
 				<div class="col-sm-8">
 					<input id="sendStation" name="sendStation" class="form-control" type="text">
 				</div>
 			</div>
 			<div class="form-group">	
-				<label class="col-sm-3 control-label">接收站Id：</label>
+				<label class="col-sm-3 control-label">接收站：</label>
 				<div class="col-sm-8">
 					<input id="receiveStation" name="receiveStation" class="form-control" type="text">
 				</div>
@@ -29,31 +29,7 @@
 					<input id="freightrateNum" name="freightrateNum" class="form-control" type="text">
 				</div>
 			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">创建人：</label>
-				<div class="col-sm-8">
-					<input id="createBy" name="createBy" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">修改人：</label>
-				<div class="col-sm-8">
-					<input id="updateBy" name="updateBy" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">创建时间：</label>
-				<div class="col-sm-8">
-					<input id="createTime" name="createTime" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">更新时间：</label>
-				<div class="col-sm-8">
-					<input id="updateTime" name="updateTime" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
+			<div class="form-group">
 				<label class="col-sm-3 control-label">状态：</label>
 				<div class="col-sm-8">
 					<input id="status" name="status" class="form-control" type="text">
