--- a/src/main/resources/templates/express/freightRate/freightRate.html
+++ b/src/main/resources/templates/express/freightRate/freightRate.html
@@ -11,37 +11,12 @@
 					<div class="select-list">
 						<ul>
 							<li>
-								发送站Id：<input type="text" name="sendStation"/>
-							</li>
-
-							<li>
-								接收站Id：<input type="text" name="receiveStation"/>
-							</li>
-
-							<li>
 								价格因子：<input type="text" name="priceFactor"/>
 							</li>
 
 							<li>
 								运价号：<input type="text" name="freightrateNum"/>
 							</li>
-
-							<li>
-								创建人：<input type="text" name="createBy"/>
-							</li>
-
-							<li>
-								修改人：<input type="text" name="updateBy"/>
-							</li>
-
-							<li>
-								创建时间：<input type="text" name="createTime"/>
-							</li>
-
-							<li>
-								更新时间：<input type="text" name="updateTime"/>
-							</li>
-
 							<li>
 								状态：<input type="text" name="status"/>
 							</li>
@@ -94,7 +69,7 @@
 		        },
 				{
 					field : 'id', 
-					title : '主键Id',
+					title : '运价编号',
 					visible: false
 				},
 				{
@@ -123,18 +98,8 @@
 					sortable: true
 				},
 				{
-					field : 'updateBy', 
-					title : '修改人',
-					sortable: true
-				},
-				{
 					field : 'createTime', 
 					title : '创建时间',
-					sortable: true
-				},
-				{
-					field : 'updateTime', 
-					title : '更新时间',
 					sortable: true
 				},
 				{
