--- a/src/main/resources/templates/express/order/edit.html
+++ b/src/main/resources/templates/express/order/edit.html
@@ -21,7 +21,7 @@
 			<div class="form-group">	
 				<label class="col-sm-3 control-label">发送省份：</label>
 				<div class="col-sm-8">
-					<input id="sendPriovince" name="sendPriovince" th:field="*{sendPriovince}" class="form-control" type="text">
+					<input id="sendProvince" name="sendProvince" th:field="*{sendProvince}" class="form-control" type="text">
 				</div>
 			</div>
 			<div class="form-group">	
@@ -33,7 +33,7 @@
 			<div class="form-group">	
 				<label class="col-sm-3 control-label">接收省份：</label>
 				<div class="col-sm-8">
-					<input id="receivePriovince" name="receivePriovince" th:field="*{receivePriovince}" class="form-control" type="text">
+					<input id="receiveProvince" name="receiveProvince" th:field="*{receiveProvince}" class="form-control" type="text">
 				</div>
 			</div>
 			<div class="form-group">	
