--- a/src/main/resources/templates/express/station/add.html
+++ b/src/main/resources/templates/express/station/add.html
@@ -6,34 +6,9 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-station-add">
 			<div class="form-group">	
-				<label class="col-sm-3 control-label">站台名称
-：</label>
-				<div class="col-sm-8">
+				<label class="col-xs-4 control-label">站台名称 ：</label>
+				<div class="col-sx-8">
 					<input id="stationName" name="stationName" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">创建人：</label>
-				<div class="col-sm-8">
-					<input id="createBy" name="createBy" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">修改人：</label>
-				<div class="col-sm-8">
-					<input id="updateBy" name="updateBy" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">创建时间：</label>
-				<div class="col-sm-8">
-					<input id="createTime" name="createTime" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">修改时间：</label>
-				<div class="col-sm-8">
-					<input id="updateTime" name="updateTime" class="form-control" type="text">
 				</div>
 			</div>
 		</form>
