--- a/src/main/resources/templates/express/station/edit.html
+++ b/src/main/resources/templates/express/station/edit.html
@@ -7,8 +7,7 @@
         <form class="form-horizontal m" id="form-station-edit" th:object="${station}">
             <input id="id" name="id" th:field="*{id}"  type="hidden">
 			<div class="form-group">	
-				<label class="col-sm-3 control-label">站台名称
-：</label>
+				<label class="col-sm-3 control-label">站台名称 ：</label>
 				<div class="col-sm-8">
 					<input id="stationName" name="stationName" th:field="*{stationName}" class="form-control" type="text">
 				</div>
@@ -16,25 +15,15 @@
 			<div class="form-group">	
 				<label class="col-sm-3 control-label">创建人：</label>
 				<div class="col-sm-8">
-					<input id="createBy" name="createBy" th:field="*{createBy}" class="form-control" type="text">
+					<input id="createBy" name="createBy" th:field="*{createBy}" class="form-control" type="text" disabled>
 				</div>
 			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">修改人：</label>
-				<div class="col-sm-8">
-					<input id="updateBy" name="updateBy" th:field="*{updateBy}" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
+			<div class="form-group">
 				<label class="col-sm-3 control-label">创建时间：</label>
 				<div class="col-sm-8">
-					<input id="createTime" name="createTime" th:field="*{createTime}" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">修改时间：</label>
-				<div class="col-sm-8">
-					<input id="updateTime" name="updateTime" th:field="*{updateTime}" class="form-control" type="text">
+					<!--th:text="${#dates.format(product.availableFrom, 'yyyy-MM-dd')}"-->
+					<!--<input id="createTime" name="createTime" th:field="*{createTime}" class="form-control" type="text" disabled>-->
+					<input id="createTime" name="createTime" th:value="*{#dates.format(createTime, 'yyyy-MM-dd')}" class="form-control" type="text" disabled>
 				</div>
 			</div>
 		</form>
