--- a/src/main/resources/templates/express/station/station.html
+++ b/src/main/resources/templates/express/station/station.html
@@ -11,26 +11,8 @@
 					<div class="select-list">
 						<ul>
 							<li>
-								站台名称
-：<input type="text" name="stationName"/>
+								站台名称 ：<input type="text" name="stationName"/>
 							</li>
-
-							<li>
-								创建人：<input type="text" name="createBy"/>
-							</li>
-
-							<li>
-								修改人：<input type="text" name="updateBy"/>
-							</li>
-
-							<li>
-								创建时间：<input type="text" name="createTime"/>
-							</li>
-
-							<li>
-								修改时间：<input type="text" name="updateTime"/>
-							</li>
-
 							<li>
 								<a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
 								<a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
@@ -41,7 +23,7 @@
 			</div>
 			
 	        <div class="btn-group-sm" id="toolbar" role="group">
-				<a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="express:station:add">
+				<a class="btn btn-success" onclick="$.modal.open('添加车站',$.operate.addUrl(id),500,300,'')" shiro:hasPermission="express:station:add">
 					<i class="fa fa-plus"></i> 添加
 				</a>
 				<a class="btn btn-primary btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="express:station:edit">
@@ -50,9 +32,7 @@
 				<a class="btn btn-danger btn-del btn-del disabled" onclick="$.operate.removeAll()" shiro:hasPermission="express:station:remove">
 					<i class="fa fa-remove"></i> 删除
 				</a>
-				<a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="express:station:export">
-						<i class="fa fa-download"></i> 导出
-				 </a>
+
 			</div>
 			<div class="col-sm-12 select-table table-striped">
 				<table id="bootstrap-table" data-mobile-responsive="true"></table>
@@ -71,7 +51,6 @@
                 createUrl: prefix + "/add",
                 updateUrl: prefix + "/edit/{id}",
                 removeUrl: prefix + "/remove",
-				exportUrl: prefix + "/export",
                 modalName: "车站",
 		        showExport: true,
                 columns: [{
@@ -79,14 +58,12 @@
 		        },
 				{
 					field : 'id', 
-					title : '主键Id
-',
+					title : '车站编号',
 					visible: false
 				},
 				{
 					field : 'stationName', 
-					title : '站台名称
-',
+					title : '站台名称',
 					sortable: true
 				},
 				{
@@ -95,18 +72,8 @@
 					sortable: true
 				},
 				{
-					field : 'updateBy', 
-					title : '修改人',
-					sortable: true
-				},
-				{
 					field : 'createTime', 
 					title : '创建时间',
-					sortable: true
-				},
-				{
-					field : 'updateTime', 
-					title : '修改时间',
 					sortable: true
 				},
 		        {
