--- a/src/main/resources/templates/express/freightRate/edit.html
+++ b/src/main/resources/templates/express/freightRate/edit.html
@@ -33,28 +33,16 @@
 			<div class="form-group">	
 				<label class="col-sm-3 control-label">创建人：</label>
 				<div class="col-sm-8">
-					<input id="createBy" name="createBy" th:field="*{createBy}" class="form-control" type="text">
+					<input id="createBy" name="createBy" th:field="*{createBy}" class="form-control" type="text" disabled>
 				</div>
 			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">修改人：</label>
-				<div class="col-sm-8">
-					<input id="updateBy" name="updateBy" th:field="*{updateBy}" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
+			<div class="form-group">
 				<label class="col-sm-3 control-label">创建时间：</label>
 				<div class="col-sm-8">
-					<input id="createTime" name="createTime" th:field="*{createTime}" class="form-control" type="text">
+					<input id="createTime" name="createTime"  th:value="*{#dates.format(createTime, 'yyyy-MM-dd')}" class="form-control" type="text" disabled>
 				</div>
 			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">更新时间：</label>
-				<div class="col-sm-8">
-					<input id="updateTime" name="updateTime" th:field="*{updateTime}" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
+			<div class="form-group">
 				<label class="col-sm-3 control-label">状态：</label>
 				<div class="col-sm-8">
 					<input id="status" name="status" th:field="*{status}" class="form-control" type="text">
