--- a/src/main/resources/templates/express/station/add.html
+++ b/src/main/resources/templates/express/station/add.html
@@ -3,12 +3,12 @@
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
 <body class="white-bg">
-    <div class="wrapper wrapper-content animated fadeInRight ibox-content">
+    <div class="wrapper wrapper-content animated fadeInRight ibox-content" style="width: 500px;margin: 0 auto;">
         <form class="form-horizontal m" id="form-station-add">
 			<div class="form-group">	
-				<label class="col-xs-4 control-label">站台名称 ：</label>
-				<div class="col-sx-8">
-					<input id="stationName" name="stationName" class="form-control" type="text">
+				<label class="col-sm-2 control-label">站台名称 ：</label>
+				<div class="col-sm-10">
+					<input id="stationName" name="stationName" class="form-control" type="text" required>
 				</div>
 			</div>
 		</form>
