--- a/src/main/resources/templates/express/station/edit.html
+++ b/src/main/resources/templates/express/station/edit.html
@@ -9,7 +9,7 @@
 			<div class="form-group">	
 				<label class="col-sm-3 control-label">站台名称 ：</label>
 				<div class="col-sm-8">
-					<input id="stationName" name="stationName" th:field="*{stationName}" class="form-control" type="text">
+					<input id="stationName" name="stationName" th:field="*{stationName}" class="form-control" type="text" required>
 				</div>
 			</div>
 			<div class="form-group">	
@@ -21,8 +21,6 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">创建时间：</label>
 				<div class="col-sm-8">
-					<!--th:text="${#dates.format(product.availableFrom, 'yyyy-MM-dd')}"-->
-					<!--<input id="createTime" name="createTime" th:field="*{createTime}" class="form-control" type="text" disabled>-->
 					<input id="createTime" name="createTime" th:value="*{#dates.format(createTime, 'yyyy-MM-dd')}" class="form-control" type="text" disabled>
 				</div>
 			</div>
