--- a/src/main/resources/templates/express/freightRate/add.html
+++ b/src/main/resources/templates/express/freightRate/add.html
@@ -40,7 +40,11 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">状态：</label>
 				<div class="col-sm-8">
-					<input id="status" name="status" class="form-control" type="text">
+					<!--<select th:replace="include::selectDict('status','ex_freight_rate_status')" class="form-control">-->
+						<select name="status" id="status"  th:with="type=${@dict.getType('ex_freight_rate_status')}"  class="form-control" required>
+							<option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
+						</select>
+					<!--<input id="status" name="status" class="form-control" type="text">-->
 				</div>
 			</div>
 		</form>
