订单、投诉建议、运价页面

--- a/src/main/resources/templates/express/complaint/complaint.html
+++ b/src/main/resources/templates/express/complaint/complaint.html
@@ -27,7 +27,8 @@
 							</li>
 
 							<li>
-								状态：<input type="text" name="status"/>
+
+								状态：<select th:replace="include::selectDict('status','ex_complaint_status')"></select>
 							</li>
 
 							<li>
