--- a/src/main/resources/templates/express/order/order.html
+++ b/src/main/resources/templates/express/order/order.html
@@ -43,13 +43,13 @@
 			
 	        <div class="btn-group-sm" id="toolbar" role="group">
 				<a class="btn btn-success" onclick="$.operate.addTab(1)" shiro:hasPermission="express:order:add">
-					<i class="fa fa-plus"></i> 添加
+					<i class="fa fa-plus"></i> 我要发货
 				</a>
 				<a class="btn btn-primary btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="express:order:edit">
-					<i class="fa fa-edit"></i> 修改
+					<i class="fa fa-edit"></i> 修改发货
 				</a>
 				<a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="express:order:export">
-						<i class="fa fa-download"></i> 导出
+						<i class="fa fa-download"></i> 导出列表
 				 </a>
 			</div>
 			<div class="col-sm-12 select-table table-striped">
