--- a/src/main/resources/templates/express/freightRate/edit.html
+++ b/src/main/resources/templates/express/freightRate/edit.html
@@ -7,13 +7,13 @@
         <form class="form-horizontal m" id="form-freightRate-edit" th:object="${freightRate}">
             <input id="id" name="id" th:field="*{id}"  type="hidden">
 			<div class="form-group">	
-				<label class="col-sm-3 control-label">发送站Id：</label>
+				<label class="col-sm-3 control-label">发送站：</label>
 				<div class="col-sm-8">
 					<input id="sendStation" name="sendStation" th:field="*{sendStation}" class="form-control" type="text">
 				</div>
 			</div>
 			<div class="form-group">	
-				<label class="col-sm-3 control-label">接收站Id：</label>
+				<label class="col-sm-3 control-label">接收站：</label>
 				<div class="col-sm-8">
 					<input id="receiveStation" name="receiveStation" th:field="*{receiveStation}" class="form-control" type="text">
 				</div>
