--- a/src/main/resources/templates/express/freightRate/edit.html
+++ b/src/main/resources/templates/express/freightRate/edit.html
@@ -9,13 +9,13 @@
 			<div class="form-group">	
 				<label class="col-sm-3 control-label">发送站：</label>
 				<div class="col-sm-8">
-					<input id="sendStation" name="sendStation" th:field="*{sendStation}" class="form-control" type="text">
+					<input id="sendStation" name="sendStation" th:field="*{sendStationStr}" class="form-control" type="text" disabled>
 				</div>
 			</div>
 			<div class="form-group">	
 				<label class="col-sm-3 control-label">接收站：</label>
 				<div class="col-sm-8">
-					<input id="receiveStation" name="receiveStation" th:field="*{receiveStation}" class="form-control" type="text">
+					<input id="receiveStation" name="receiveStation" th:field="*{receiveStationStr}" class="form-control" type="text" disabled>
 				</div>
 			</div>
 			<div class="form-group">	
@@ -25,9 +25,9 @@
 				</div>
 			</div>
 			<div class="form-group">	
-				<label class="col-sm-3 control-label">运价号：</label>
+				<label class="col-sm-3 control-label">服务方式：</label>
 				<div class="col-sm-8">
-					<input id="freightrateNum" name="freightrateNum" th:field="*{freightrateNum}" class="form-control" type="text">
+					<input id="serviceMode" name="serviceMode" th:field="*{serviceModeStr}" class="form-control" type="text" disabled>
 				</div>
 			</div>
 			<div class="form-group">	
@@ -45,7 +45,10 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">状态：</label>
 				<div class="col-sm-8">
-					<input id="status" name="status" th:field="*{status}" class="form-control" type="text">
+					<select name="status" id="status"  th:with="type=${@dict.getType('ex_freight_rate_status')}" th:field="*{status}"  class="form-control" required>
+						<option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
+					</select>
+					<!--<input id="status" name="status" th:field="*{status}" class="form-control" type="text">-->
 				</div>
 			</div>
 		</form>
