--- a/src/main/resources/templates/express/freightRate/queryFreightRate.html
+++ b/src/main/resources/templates/express/freightRate/queryFreightRate.html
@@ -1,125 +1,52 @@
 <!DOCTYPE HTML>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+<html  lang="zh" xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
-<body class="gray-bg">
-    
-     <div class="container-div">
-		<div class="row">
-			<div class="col-sm-12 search-collapse">
-				<form id="formId">
-					<div class="select-list">
-						<ul>
-							<li>
-								价格因子：<input type="text" name="priceFactor"/>
-							</li>
-
-							<li>
-								运价号：<input type="text" name="freightrateNum"/>
-							</li>
-							<li>
-								状态：<input type="text" name="status"/>
-							</li>
-
-							<li>
-								<a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
-								<a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
-							</li>
-						</ul>
-					</div>
-				</form>
+<body class="white-bg">
+<div class="wrapper wrapper-content animated fadeInRight ibox-content">
+	<form class="form-horizontal m" id="form-freightRate-edit" >
+		<input id="id" name="id"  type="hidden">
+		<div class="form-group">
+			<label class="col-sm-1 control-label">发送站：</label>
+			<div class="col-sm-5">
+				<input id="sendStation" name="sendStation" class="form-control" type="text" >
 			</div>
-			
-	        <div class="btn-group-sm" id="toolbar" role="group">
-				<a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="express:freightRate:add">
-					<i class="fa fa-plus"></i> 添加
-				</a>
-				<a class="btn btn-primary btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="express:freightRate:edit">
-					<i class="fa fa-edit"></i> 修改
-				</a>
-				<a class="btn btn-danger btn-del btn-del disabled" onclick="$.operate.removeAll()" shiro:hasPermission="express:freightRate:remove">
-					<i class="fa fa-remove"></i> 删除
-				</a>
-				<a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="express:freightRate:export">
-						<i class="fa fa-download"></i> 导出
-				 </a>
-			</div>
-			<div class="col-sm-12 select-table table-striped">
-				<table id="bootstrap-table" data-mobile-responsive="true"></table>
+			<label class="col-sm-1 control-label">接收站：</label>
+			<div class="col-sm-5">
+				<input id="receiveStation" name="receiveStation"  class="form-control" type="text" >
 			</div>
 		</div>
-	</div>
-    <div th:include="include :: footer"></div>
-    <script th:inline="javascript">
-        var editFlag = [[${@permission.hasPermi('express:freightRate:edit')}]];
-        var removeFlag = [[${@permission.hasPermi('express:freightRate:remove')}]];
-        var prefix = ctx + "express/freightRate";
+		<div class="form-group">
+			<label class="col-sm-3 control-label">服务方式：</label>
+			<div class="col-sm-8">
+				<input id="serviceMode" name="serviceMode" class="form-control" type="text" >
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="col-sm-3 control-label">重量：</label>
+			<div class="col-sm-8">
+				<input  name="serviceMode" class="form-control" type="text" >
+			</div>
+		</div>
+	</form>
+</div>
+<div th:include="include::footer"></div>
+<script type="text/javascript">
+	var prefix = ctx + "express/freightRate";
+	$("#form-freightRate-edit").validate({
+		rules:{
+			xxxx:{
+				required:true,
+			},
+		},
+		focusCleanup: true
+	});
 
-        $(function() {
-            var options = {
-                url: prefix + "/list",
-                createUrl: prefix + "/add",
-                updateUrl: prefix + "/edit/{id}",
-                removeUrl: prefix + "/remove",
-				exportUrl: prefix + "/export",
-                modalName: "运价因子",
-		        showExport: true,
-                columns: [{
-		            checkbox: true
-		        },
-				{
-					field : 'id', 
-					title : '运价编号',
-					visible: false
-				},
-				{
-					field : 'sendStation', 
-					title : '发送站',
-					sortable: true
-				},
-				{
-					field : 'receiveStation', 
-					title : '接收站',
-					sortable: true
-				},
-				{
-					field : 'priceFactor', 
-					title : '价格因子',
-					sortable: true
-				},
-				{
-					field : 'freightrateNum', 
-					title : '运价号',
-					sortable: true
-				},
-				{
-					field : 'createBy', 
-					title : '创建人',
-					sortable: true
-				},
-				{
-					field : 'createTime', 
-					title : '创建时间',
-					sortable: true
-				},
-				{
-					field : 'status', 
-					title : '状态',
-					sortable: true
-				},
-		        {
-		            title: '操作',
-		            align: 'center',
-		            formatter: function(value, row, index) {
-		            	var actions = [];
-		            	actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
-						return actions.join('');
-		            }
-		        }]
-            };
-            $.table.init(options);
-        });
-    </script>
+	function submitHandler() {
+		if ($.validate.form()) {
+			$.operate.save(prefix + "/edit", $('#form-freightRate-edit').serialize());
+		}
+	}
+</script>
 </body>
 </html>
