--- a/src/main/resources/templates/express/order/order.html
+++ b/src/main/resources/templates/express/order/order.html
@@ -45,9 +45,6 @@
 				<a class="btn btn-success" onclick="$.operate.addTab(1)" shiro:hasPermission="express:order:add">
 					<i class="fa fa-plus"></i> 我要发货
 				</a>
-				<a class="btn btn-primary btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="express:order:edit">
-					<i class="fa fa-edit"></i> 修改发货
-				</a>
 				<a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="express:order:export">
 						<i class="fa fa-download"></i> 导出列表
 				 </a>
@@ -101,7 +98,7 @@
 					sortable: true
 				},
 				{
-					field : 'sendCity', 
+					field : 'sendCityStr',
 					title : '发送城市',
 					sortable: true
 				},
@@ -111,7 +108,7 @@
 					sortable: true
 				},
 				{
-					field : 'receiveCity', 
+					field : 'receiveCityStr',
 					title : '接收城市',
 					sortable: true
 				},
@@ -220,7 +217,9 @@
 		            align: 'center',
 		            formatter: function(value, row, index) {
 		            	var actions = [];
-		            	actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+		            	if(row.status==1){
+							actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.editTab(\'' + row.id + '\')" ><i class="fa fa-edit"></i>编辑</a> ');
+						}
                         actions.push('<a class="btn btn-warning btn-xs   ' + removeFlag + '" href="#" onclick="orderDetail(\'' + row.id + '\')"><i class="fa fa-search"></i>详情</a>');
 						return actions.join('');
 		            }
@@ -228,9 +227,13 @@
             };
 			$.table.init(options);
         });
-		var orderDetail=function(orderId){
-			var url = prefix + '/detail/' + orderId;
-			createMenuItem(url, "订单详情");
+		// var orderDetail=function(orderId){
+		// 	var url = prefix + '/detail/' + orderId;
+		// 	createMenuItem(url, "订单详情");
+		// }
+		var orderEdit=function(orderId){
+			var url = prefix + '/edit/' + orderId;
+			createMenuItem(url, "修改订单");
 		}
 
     </script>
