--- a/src/main/resources/templates/express/freightRate/queryFreightRate.html
+++ b/src/main/resources/templates/express/freightRate/queryFreightRate.html
@@ -1,52 +1,94 @@
 <!DOCTYPE HTML>
-<html  lang="zh" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
 <body class="white-bg">
 <div class="wrapper wrapper-content animated fadeInRight ibox-content">
-	<form class="form-horizontal m" id="form-freightRate-edit" >
-		<input id="id" name="id"  type="hidden">
-		<div class="form-group">
-			<label class="col-sm-1 control-label">发送站：</label>
-			<div class="col-sm-5">
-				<input id="sendStation" name="sendStation" class="form-control" type="text" >
-			</div>
-			<label class="col-sm-1 control-label">接收站：</label>
-			<div class="col-sm-5">
-				<input id="receiveStation" name="receiveStation"  class="form-control" type="text" >
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">服务方式：</label>
-			<div class="col-sm-8">
-				<input id="serviceMode" name="serviceMode" class="form-control" type="text" >
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">重量：</label>
-			<div class="col-sm-8">
-				<input  name="serviceMode" class="form-control" type="text" >
-			</div>
-		</div>
-	</form>
+    <form class="form-horizontal m" id="form-freightRate-edit">
+        <input id="id" name="id" type="hidden">
+        <div class="form-group col-sm-9">
+            <div class="form-group col-sm-12">
+                <label class="col-sm-2 control-label">发送站：</label>
+                <div class="col-sm-3">
+                    <select id="sendStation" class="form-control" name="sendStation" th:onchange="linkageStation('sendStation')" required>
+                        <option value="">选择车站</option>
+                        <option th:each="sta:${stationList}" th:value="${sta.id}" th:text="${sta.stationName}" ></option>
+                    </select>
+                </div>
+                <label class="col-sm-2 control-label">接收站：</label>
+                <div class="col-sm-3">
+                    <!--<input id="receiveStation" name="receiveStation" class="form-control" type="text">-->
+                    <select id="receiveStation" class="form-control" name="receiveStation" th:onchange="linkageStation('receiveStation')" required>
+                        <option value="">选择车站</option>
+                        <option th:each="sta:${stationList}" th:value="${sta.id}" th:text="${sta.stationName}" ></option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group col-sm-12">
+                <label class="col-sm-2 control-label">服务方式：</label>
+                <div class="col-sm-3">
+                    <!--<input id="serviceMode" name="serviceMode" class="form-control" type="text">-->
+                    <select name="serviceMode" th:with="list=${@dict.getType('ex_service_mode')}"  class="form-control" required>
+                        <option value="">选择服务方式</option>
+                        <option th:each="serviceMode : ${list}" th:text="${serviceMode.dictLabel}" th:value="${serviceMode.dictValue}"></option>
+                    </select>
+                </div>
+                <label class="col-sm-2 control-label">重量：</label>
+                <div class="col-sm-3">
+                    <input name="serviceMode" class="form-control" type="number" required>
+                </div>
+            </div>
+        </div>
+        <div class="form-group col-sm-3">
+            <div class="form-group col-sm-12">
+                <div style="width: 100px;height: 90px;background: #00a65a;border-radius: 10px;text-align: center;line-height: 90px;font-size: 20px;color: #1a2226;" onclick="submitHandler()">
+                    开始查询
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+<div class="wrapper wrapper-content animated fadeInRight ibox-content">
+        <table class="table table-hover" style="width: 800px;margin: 0 auto;text-align: center;">
+            <thead>
+                <tr >
+                  <th><div class="th-inner sortable both"></div><div class="fht-cell"></div></th>
+                  <th><div class="th-inner sortable both" id="thead" style="text-align: center;">请选择站点<span></span>到<span></span></div><div class="fht-cell"></div></th>
+                </tr>
+            </thead>
+            <tbody id="tbody">
+
+
+            </tbody>
+        </table>
+    <!--</div>-->
 </div>
 <div th:include="include::footer"></div>
 <script type="text/javascript">
-	var prefix = ctx + "express/freightRate";
-	$("#form-freightRate-edit").validate({
-		rules:{
-			xxxx:{
-				required:true,
-			},
-		},
-		focusCleanup: true
-	});
+    var prefix = ctx + "express/freightRate";
 
-	function submitHandler() {
-		if ($.validate.form()) {
-			$.operate.save(prefix + "/edit", $('#form-freightRate-edit').serialize());
-		}
-	}
+    function submitHandler() {
+        if ($.validate.form()) {
+            $.operate.save(prefix + "/edit", $('#form-freightRate-edit').serialize());
+
+
+        }
+    }
+    var linkageStation=function(name){
+        var send=$("#sendStation").val();
+        var receive=$("#receiveStation").val();
+        if(send==receive){
+            $.modal.alert("不能选择两个相同的车站！");
+            $.each($("#"+name).find("option"),function(i,o){
+                if($(o).val()==""){
+                    $(o).attr("selected",true);
+                }else{
+                    $(o).attr("selected",false);
+                }
+            })
+            return false;
+        }
+    }
 </script>
 </body>
 </html>
