--- a/src/main/resources/templates/express/order/add.html
+++ b/src/main/resources/templates/express/order/add.html
@@ -4,6 +4,7 @@
 <head th:include="include :: header"></head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
+		<p style="font-size: 20px;color:#953b39;text-align: center;">提示信息：适用于重量不足30吨且体积不足60立方米的所有品类货物，但以下货物不能办理：散堆装货物；危险货物；超长、超重、超限、集重货物；活动物及需冷藏、保温运输的易腐货物；易于污染其他货物的污秽货物；非棚车装运的货物；国际联运、需在米轨与准轨换装运输的货物；在专用线装卸车的货物。</p>
         <form class="form-horizontal m-md" id="form-order-add">
 			<div class="form-group">
 				<p class="alert alert-info" style="text-align:center;font-size:18px;">车站信息</p>
