--- a/src/main/resources/templates/express/order/add.html
+++ b/src/main/resources/templates/express/order/add.html
@@ -241,7 +241,8 @@
 				var invoice = $("input[id='invoice']").is(':checked') == true ? 1 : 0;
 				data.push({"name": "invoice", "value": invoice});
 
-				$.operate.save(prefix + "/add", data);
+				$.operate.addTab(prefix + "/add", data);
+
 
 	        }
 	    }
