--- a/src/main/resources/templates/express/complaint/add.html
+++ b/src/main/resources/templates/express/complaint/add.html
@@ -5,61 +5,71 @@
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-complaint-add">
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">投诉人名：</label>
-				<div class="col-sm-8">
-					<input id="userName" name="userName" class="form-control" type="text">
+			<p class="alert alert-info" style="text-align:center;font-size:18px;" >客户信息</p>
+			<div style="border: solid 2px #eee;padding: 50px;margin: 30px;">
+				<div class="form-group">
+					<label class="col-sm-2 control-label"><span style="color: #ff0000">*</span>您的姓名：</label>
+					<div class="col-sm-3">
+						<input id="userName" name="userName" class="form-control" type="text" required>
+					</div>
+					<label class="col-sm-2 control-label"><span style="color: #ff0000">*</span>联系方式：</label>
+					<div class="col-sm-3">
+						<input id="userPhone" name="userPhone" class="form-control" type="number" required>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">联系人方式：</label>
-				<div class="col-sm-8">
-					<input id="userPhone" name="userPhone" class="form-control" type="text">
+				<div class="form-group">
+					<label class="col-sm-2 control-label"><span style="color: #ff0000">*</span>身份证：</label>
+					<div class="col-sm-10">
+						<input id="idCard" name="idCard" class="form-control" type="text" required>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">身份证：</label>
-				<div class="col-sm-8">
-					<input id="idCard" name="idCard" class="form-control" type="text">
+				<div class="form-group">
+					<label class="col-sm-2 control-label"><span style="color: #ff0000">*</span>邮箱：</label>
+					<div class="col-sm-3">
+						<input id="email" name="email" class="form-control" type="text" required>
+					</div>
+					<label class="col-sm-2 control-label">邮编：</label>
+					<div class="col-sm-3">
+						<input id="postalCode" name="postalCode" class="form-control" type="text">
+					</div>
 				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">邮箱：</label>
-				<div class="col-sm-8">
-					<input id="email" name="email" class="form-control" type="text">
+				<div class="form-group">
+
 				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">邮编：</label>
-				<div class="col-sm-8">
-					<input id="postalCode" name="postalCode" class="form-control" type="text">
+				<div class="form-group">
+					<label class="col-sm-2 control-label">您地址：</label>
+					<div class="col-sm-10">
+						<input id="adress" name="adress" class="form-control" type="text">
+					</div>
 				</div>
+
 			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">投诉人地址：</label>
-				<div class="col-sm-8">
-					<input id="adress" name="adress" class="form-control" type="text">
+			<p class="alert alert-info" style="text-align:center;font-size:18px;" >投诉/建议信息</p>
+			<div style="border: solid 2px #eee;padding: 50px;margin: 30px;">
+				<div class="form-group">
+					<label class="col-sm-2 control-label"><span style="color: #ff0000">*</span>投诉主题：</label>
+					<div class="col-sm-3">
+						<input id="complaintTheme" name="complaintTheme" class="form-control" type="text" required>
+					</div>
+					<label class="col-sm-2 control-label">被投诉单位：</label>
+					<div class="col-sm-3">
+						<input id="beComplaint" name="beComplaint" class="form-control" type="text">
+					</div>
 				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">投诉主题：</label>
-				<div class="col-sm-8">
-					<input id="complaintTheme" name="complaintTheme" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">投诉内容：</label>
-				<div class="col-sm-8">
-					<input id="complaintContent" name="complaintContent" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-3 control-label">被投诉单位：</label>
-				<div class="col-sm-8">
-					<input id="beComplaint" name="beComplaint" class="form-control" type="text">
+				<div class="form-group">
+					<label class="col-sm-2 control-label"><span style="color: #ff0000">*</span>投诉内容：</label>
+					<div class="col-sm-10">
+						<textarea rows="5" cols="5" id="complaintContent" name="complaintContent" class="form-control" required></textarea>
+					</div>
 				</div>
 			</div>
 		</form>
+	</div>
+	<div class="row">
+		<div class="col-sm-offset-5 col-sm-10">
+			<button type="button" class="btn btn-sm btn-primary" onclick="submitHandler()"><i class="fa fa-check"></i>保 存</button>&nbsp;
+			<button type="button" class="btn btn-sm btn-danger" onclick="closeItem()"><i class="fa fa-reply-all"></i>关 闭 </button>
+		</div>
 	</div>
     <div th:include="include::footer"></div>
     <script type="text/javascript">
@@ -75,7 +85,23 @@
 		
 		function submitHandler() {
 	        if ($.validate.form()) {
-	            $.operate.save(prefix + "/add", $('#form-complaint-add').serialize());
+				var phoneReg=/^1[3,4,5,8]\d{9}$/
+				if(!phoneReg.test($("#userPhone").val())){
+					$.modal.alert("联系人电话格式不正确，请确认");
+					return false;
+				}
+				var re = /^[A-Za-z\d]+([-_.][A-Za-z\d]+)*@([A-Za-z\d]+[-.])+[A-Za-z\d]{2,4}$/;
+				if (!re.test($("#email").val())) {
+					$.modal.alert("邮箱格式不正确，请确认");
+					return false;
+				}
+
+				var idcardReg = /^[1-9]\d{7}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}$|^[1-9]\d{5}[1-9]\d{3}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}([0-9]|X)$/;
+				if(!idcardReg.test($("#idCard").val())) {
+					$.modal.alert("身份证格式不正确，请确认");
+					return false;
+				}
+				$.operate.saveTab(prefix + "/add", $('#form-complaint-add').serialize());
 	        }
 	    }
 	</script>
