--- a/src/main/resources/templates/express/orderDress/edit.html
+++ b/src/main/resources/templates/express/orderDress/edit.html
@@ -5,29 +5,30 @@
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-orderDress-edit" th:object="${orderDress}">
-            <input id="id" name="id" th:field="*{id}"  type="hidden">
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">订单Id：</label>
-				<div class="col-sm-8">
-					<input id="orderId" name="orderId" th:field="*{orderId}" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
+			<input   name="orderId" th:field="*{orderId}" class="form-control" type="hidden">
+			<div class="form-group">
 				<label class="col-sm-3 control-label">订单编号：</label>
 				<div class="col-sm-8">
-					<input id="orderNo" name="orderNo" th:field="*{orderNo}" class="form-control" type="text">
+					<input id="orderNo" name="orderNo" th:field="*{orderNo}" class="form-control" type="text" readonly>
 				</div>
 			</div>
 			<div class="form-group">	
 				<label class="col-sm-3 control-label">省份编码：</label>
 				<div class="col-sm-8">
-					<input id="provinceId" name="provinceId" th:field="*{provinceId}" class="form-control" type="text">
+					<select name="provinceId" id="provinceId" th:with="list=${@province.getProvinceList()}" th:field="*{provinceId}" th:onchange="getCityListByProvinceId(this.value,'cityId','')" class="form-control" required>
+						<option value="">选择省份</option>
+						<option th:each="province : ${list}" th:text="${province.province}" th:value="${province.provinceid}"></option>
+					</select>
 				</div>
 			</div>
 			<div class="form-group">	
 				<label class="col-sm-3 control-label">城市编码：</label>
 				<div class="col-sm-8">
-					<input id="cityId" name="cityId" th:field="*{cityId}" class="form-control" type="text">
+					<!--<input id="cityId" name="cityId" th:field="*{cityId}" class="form-control" type="text">-->
+					<input type="hidden" class="form-control" id="city" th:field="*{cityId}" />
+					<select name="cityId" id="cityId" class="form-control" required>
+						<option value="">选择城市</option>
+					</select>
 				</div>
 			</div>
 			<div class="form-group">	
@@ -36,36 +37,25 @@
 					<input id="dress" name="dress" th:field="*{dress}" class="form-control" type="text">
 				</div>
 			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">创建时间：</label>
-				<div class="col-sm-8">
-					<input id="createTime" name="createTime" th:field="*{createTime}" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">创建人：</label>
-				<div class="col-sm-8">
-					<input id="createBy" name="createBy" th:field="*{createBy}" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">修改人：</label>
-				<div class="col-sm-8">
-					<input id="updateBy" name="updateBy" th:field="*{updateBy}" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
-				<label class="col-sm-3 control-label">修改时间：</label>
-				<div class="col-sm-8">
-					<input id="updateTime" name="updateTime" th:field="*{updateTime}" class="form-control" type="text">
-				</div>
-			</div>
-			<div class="form-group">	
+			<div class="form-group">
 				<label class="col-sm-3 control-label">备注：</label>
 				<div class="col-sm-8">
-					<input id="remark" name="remark" th:field="*{remark}" class="form-control" type="text">
+					<textarea id="remark" name="remark" th:field="*{remark}" class="form-control" ></textarea>
 				</div>
 			</div>
+			<div class="form-group">	
+				<label class="col-sm-3 control-label">上次修改人：</label>
+				<div class="col-sm-8">
+					<input name="createBy" th:field="*{createBy}" class="form-control" disabled >
+				</div>
+			</div>
+			<div class="form-group">	
+				<label class="col-sm-3 control-label">上次修改时间：</label>
+				<div class="col-sm-8">
+					<input  name="createTime" th:value="*{createTime}" class="form-control" disabled>
+				</div>
+			</div>
+
 		</form>
     </div>
     <div th:include="include::footer"></div>
@@ -85,6 +75,25 @@
 	            $.operate.save(prefix + "/edit", $('#form-orderDress-edit').serialize());
 	        }
 	    }
+
+		var getCityListByProvinceId=function(val,target,initCity){
+			// alert(val+"   "+target+"    "+initCity)
+			$.operate.postQuery("/getCityByProvinceId",{"provinceId":val},function(result){
+				if($.common.isNotEmpty(result)){
+					var options=["<option value=''>选择城市</option>"];
+					$.each(result,function(i,o){
+						if(o.cityid==initCity){
+							options.push("<option value='"+o.cityid+"' selected> "+o.city+"</option>")
+						}else{
+							options.push("<option value='"+o.cityid+"' > "+o.city+"</option>")
+						}
+					})
+					$("#"+target).html(options.join(""));
+				}
+			})
+		}
+
+		getCityListByProvinceId($("#receiveProvince").val(),'cityId',$("#city").val())
 	</script>
 </body>
 </html>
